--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello Golu</h1>
+<p>hehehe I love you 🥰 </p>
 <p>lmao</p>
 </body>
 </html>
