--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <link href="output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-8xl">
-    This site is in maintenance.
-  </h1>
-</body>
+  <div class="text-top"><h1>Pinak Idea Lab</h1></div>
+  <div class="circle"><h1>:)</h1></div>
+  <div class="bottom">
+    <div class="eye"></div>
+  </div>
+  </body>
 </html>
