--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="main.css" rel="stylesheet">
 </head>
 <body>
-  <div class="text-top"><h1>Pinak Idea Lab</h1></div>
+  <div class="text-top"><h1>Hello</h1></div>
   <div class="circle"><h1>:)</h1></div>
   <div class="bottom">
     <div class="eye"></div>
